--- a/add-produto.html
+++ b/add-produto.html
@@ -1,139 +1,216 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adicionar Produto</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 500px; margin: 20px auto; padding: 20px; }
-    .form-group { margin-bottom: 15px; }
-    label { display: block; font-weight: bold; }
-    input, select { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
-    button { padding: 10px 20px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer; }
-    #message { margin-top: 10px; font-size: 16px; }
-    #message.error { color: red; }
-    #message.success { color: green; }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adicionar Produto</title>
+    <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' 'unsafe-inline';
+    style-src 'self' 'unsafe-inline';
+    img-src 'self' data: https:; /* Permite imagens de URLs externas e data URIs */
+    connect-src 'self' https://script.google.com; /* Crucial para o fetch API */
+    font-src 'self';
+    object-src 'none';
+    base-uri 'self';
+  ">
+  <style>
+    body { font-family: Arial, sans-serif; max-width: 500px; margin: 20px auto; padding: 20px; border: 1px solid #ddd; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); background-color: #f9f9f9; }
+    h1 { text-align: center; color: #333; margin-bottom: 25px; }
+    .form-group { margin-bottom: 20px; }
+    label { display: block; font-weight: bold; margin-bottom: 8px; color: #555; }
+    /* Estilos para todos os inputs de texto, URL, textarea e selects */
+    input[type="text"],
+    input[type="url"],
+    textarea,
+    select {
+      width: calc(100% - 20px); /* Ajuste para padding */
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box; /* Garante que padding não aumente a largura total */
+      font-size: 16px;
+    }
+    textarea { resize: vertical; min-height: 80px; } /* Estilo específico para textarea */
+    button {
+      padding: 12px 25px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 17px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      width: 100%;
+    }
+    button:hover { background-color: #0056b3; transform: translateY(-1px); }
+    button:active { transform: translateY(0); }
+    #message {
+      margin-top: 20px;
+      padding: 12px;
+      border-radius: 4px;
+      text-align: center;
+      font-weight: bold;
+      display: none; /* Escondido por padrão */
+    }
+    #message.error { background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
+    #message.success { background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
+  </style>
 </head>
 <body>
-  <h1>Adicionar Produto</h1>
-  <form id="produto-form">
-    <div class="form-group">
-      <label for="nome">Nome do Produto</label>
-      <input type="text" id="nome" name="nome" required>
-    </div>
-    <div class="form-group">
-      <label for="preco">Preço (R$)</label>
-      <input type="number" id="preco" name="preco" step="0.01" required>
-    </div>
-    <div class="form-group">
-      <label for="tamanho">Tamanho</label>
-      <select id="tamanho" name="tamanho" required>
-        <option value="pequeno">Pequeno</option>
-        <option value="medio">Médio</option>
-        <option value="grande">Grande</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="categoria">Categoria</label>
-      <select id="categoria" name="categoria" required>
-        <option value="todas">Todas</option>
-        <option value="eletronicos">Eletrônicos</option>
-        <option value="moda">Moda</option>
-        <option value="fitness">Fitness</option>
-        <option value="casa">Casa</option>
-        <option value="beleza">Beleza</option>
-        <option value="esportes">Esportes</option>
-        <option value="livros">Livros</option>
-        <option value="infantil">Infantil</option>
-        <option value="celulares">Celulares</option>
-        <option value="eletrodomesticos">Eletrodomésticos</option>
-        <option value="pet">Pet</option>
-        <option value="jardinagem">Jardinagem</option>
-        <option value="automotivo">Automotivo</option>
-        <option value="gastronomia">Gastronomia</option>
-        <option value="games">Games</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="loja">Loja</label>
-      <select id="loja" name="loja" required>
-        <option value="todas">Todas</option>
-        <option value="amazon">Amazon</option>
-        <option value="magalu">Magalu</option>
-        <option value="shein">Shein</option>
-        <option value="shopee">Shopee</option>
-        <option value="mercadolivre">Mercado Livre</option>
-        <option value="alibaba">Alibaba</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="imagem">Imagem</label>
-      <input type="file" id="imagem" name="imagem" accept="image/*" required>
-    </div>
-    <button type="submit">Adicionar</button>
-    <div id="message"></div>
-  </form>
-  <script>
-    const form = document.getElementById('produto-form');
-    const message = document.getElementById('message');
+  <h1>Adicionar Produto</h1>
+  <form id="produto-form">
+    <div class="form-group">
+      <label for="nome">Nome do Produto</label>
+      <input type="text" id="nome" name="nome" required>
+    </div>
+    <div class="form-group">
+      <label for="descricao">Descrição do Produto</label>
+      <textarea id="descricao" name="descricao" rows="4"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="preco">Preço (R$)</label>
+            <input type="text" id="preco" name="preco" placeholder="Ex: 123.45 ou 123,45" required>
+    </div>
+    <div class="form-group">
+      <label for="link">Link do Produto</label>
+      <input type="url" id="link" name="link" placeholder="https://exemplo.com/produto-xyz" required>
+    </div>
+    <div class="form-group">
+      <label for="imagens">URL da Imagem do Produto</label>
+            <input type="url" id="imagens" name="imagens" placeholder="Ex: https://exemplo.com/imagem.jpg" required>
+    </div>
+    <div class="form-group">
+      <label for="categoria">Categoria</label>
+      <select id="categoria" name="categoria" required>
+        <option value="">Selecione a Categoria</option>
+        <option value="todas">Todas</option>
+        <option value="eletronicos">Eletrônicos</option>
+        <option value="moda">Moda</option>
+        <option value="fitness">Fitness</option>
+        <option value="casa">Casa</option>
+        <option value="beleza">Beleza</option>
+        <option value="esportes">Esportes</option>
+        <option value="livros">Livros</option>
+        <option value="infantil">Infantil</option>
+        <option value="celulares">Celulares</option>
+        <option value="eletrodomesticos">Eletrodomésticos</option>
+        <option value="pet">Pet</option>
+        <option value="jardinagem">Jardinagem</option>
+        <option value="automotivo">Automotivo</option>
+        <option value="gastronomia">Gastronomia</option>
+        <option value="games">Games</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="loja">Loja</label>
+      <select id="loja" name="loja" required>
+        <option value="">Selecione a Loja</option>
+        <option value="todas">Todas</option>
+        <option value="amazon">Amazon</option>
+        <option value="magalu">Magalu</option>
+        <option value="shein">Shein</option>
+        <option value="shopee">Shopee</option>
+        <option value="mercadolivre">Mercado Livre</option>
+        <option value="alibaba">Alibaba</option>
+      </select>
+    </div>
+        <div class="form-group">
+      <label for="tamanho">Tamanho</label>
+      <select id="tamanho" name="tamanho" required>
+        <option value="">Selecione o Tamanho</option>
+        <option value="pequeno">Pequeno</option>
+        <option value="medio">Médio</option>
+        <option value="grande">Grande</option>
+      </select>
+    </div>
 
-    // Verificar token de acesso
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get('tempToken') !== 'triple-click-access') {
-      alert('Acesso não autorizado.');
-      window.location.href = '/index.html';
-    }
+    <button type="submit">Adicionar Produto</button>
+    <div id="message"></div>
+  </form>
 
-    const showMessage = (text, isError = false) => {
-      message.textContent = text;
-      message.className = isError ? 'error' : 'success';
-      setTimeout(() => { message.textContent = ''; message.className = ''; }, 5000);
-    };
+  <script>
+    const form = document.getElementById('produto-form');
+    const messageDiv = document.getElementById('message');
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      console.log('Formulário submetido');
+    // SEU ID DE IMPLANTAÇÃO DO GOOGLE APPS SCRIPT AQUI!
+    // USE O ID QUE VOCÊ ME FORNECEU AGORA: AKfycbyq0caZb8YCyN-h6E6Os4usnz_a_-wps06_t11llvaaQnDzv4XtAco4piR8a3uhe1-sng
+    const DEPLOYMENT_ID = 'AKfycbyq0caZb8YCyN-h6E6Os4usnz_a_-wps06_t11llvaaQnDzv4XtAco4piR8a3uhe1-sng';
+    const SCRIPT_URL = `https://script.google.com/macros/s/${DEPLOYMENT_ID}/exec`;
 
-      const imagemInput = document.getElementById('imagem');
-      if (!imagemInput.files[0]) {
-        showMessage('Por favor, selecione uma imagem', true);
-        return;
-      }
+    // --- Verificação de Token de Acesso ---
+    const urlParams = new URLSearchParams(window.location.search);
+    const tempToken = urlParams.get('tempToken');
+    if (tempToken !== 'triple-click-access') {
+      alert('Acesso não autorizado. Você será redirecionado.');
+      // Ajuste para a URL correta do seu index.html se estiver em um servidor,
+      // por exemplo: window.location.href = 'https://www.centrodecompra.com.br/index.html';
+      window.location.href = '/index.html';
+    }
 
-      const reader = new FileReader();
-      reader.onload = async (event) => {
-        const produto = {
-          nome: form.nome.value,
-          preco: parseFloat(form.preco.value),
-          tamanho: form.tamanho.value,
-          categoria: form.categoria.value,
-          loja: form.loja.value,
-          imagem: event.target.result
-        };
-        console.log('Produto a ser enviado:', produto);
+    // --- Função para exibir mensagens ---
+    const showMessage = (text, isError = false) => {
+      messageDiv.textContent = text;
+      messageDiv.className = isError ? 'error' : 'success';
+      messageDiv.style.display = 'block'; // Mostra a div de mensagem
+      setTimeout(() => {
+        messageDiv.textContent = '';
+        messageDiv.className = '';
+        messageDiv.style.display = 'none'; // Esconde a div novamente
+      }, 5000); // Mensagem some após 5 segundos
+    };
 
-        try {
-          const response = await fetch('https://script.google.com/macros/s/AKfycbznGd2bFt6qpmJOwupDmhlAwkYAB_Tw0ieVe0JgyGBx9b6QxagA-15WQcsqeVPgSEcP/exec', {
-            method: 'POST',
-            body: JSON.stringify(produto),
-            headers: { 'Content-Type': 'application/json' }
-          });
-          const result = await response.json();
-          console.log('Resposta do servidor:', result);
-          if (result.status === 'success') {
-            showMessage('Produto adicionado com sucesso!');
-            form.reset();
-          } else {
-            showMessage('Erro ao adicionar produto: ' + result.message, true);
-          }
-        } catch (error) {
-          console.error('Erro ao enviar:', error);
-          showMessage('Erro ao adicionar produto: ' + error.message, true);
-        }
-      };
-      reader.readAsDataURL(imagemInput.files[0]);
-    });
-  </script>
+    // --- Event Listener para Submissão do Formulário ---
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault(); // Impede o envio padrão do formulário
+      showMessage('Enviando produto...', false); // Feedback inicial
+
+      // Coleta os dados do formulário
+      const produto = {
+        nome: form.nome.value,
+        descricao: form.descricao.value, // Campo "descricao" adicionado
+        preco: form.preco.value, // Mantido como texto (string) para flexibilidade (ex: "123,45")
+        link: form.link.value, // Campo "link" adicionado
+        imagens: form.imagens.value, // Agora coleta a URL do campo "imagens"
+        categoria: form.categoria.value,
+        loja: form.loja.value,
+        tamanho: form.tamanho.value // Mantido
+      };
+
+      console.log('Produto a ser enviado:', produto);
+
+      try {
+        const response = await fetch(SCRIPT_URL, {
+          method: 'POST',
+          mode: 'cors', // Necessário para requisições cross-origin
+          headers: {
+            'Content-Type': 'application/json' // Indica que estamos enviando JSON
+          },
+          body: JSON.stringify(produto) // Converte o objeto produto para JSON
+        });
+
+        // Verifica se a requisição foi bem-sucedida (status 2xx)
+        if (response.ok) {
+          const result = await response.json(); // Tenta parsear a resposta como JSON
+          console.log('Resposta do servidor:', result);
+
+          if (result.status === 'success') {
+            showMessage('Produto adicionado com sucesso!', false);
+            form.reset(); // Limpa o formulário
+          } else {
+            showMessage('Erro ao adicionar produto: ' + (result.message || 'Resposta inesperada.'), true);
+          }
+        } else {
+          // Se a resposta não for OK (ex: 400, 500)
+          const errorText = await response.text(); // Pega o texto da resposta de erro
+          console.error('Erro na resposta do servidor (status ' + response.status + '):', errorText);
+          showMessage('Erro ao adicionar produto: ' + response.statusText + ' (' + response.status + ')', true);
+        }
+      } catch (error) {
+        console.error('Erro de conexão ou sistema:', error);
+        showMessage('Erro de conexão ao servidor: ' + error.message, true);
+      }
+    });
+  </script>
 </body>
 </html>
