--- a/add-produto.html
+++ b/add-produto.html
@@ -19,9 +19,9 @@
     h1 { text-align: center; color: #333; margin-bottom: 25px; }
     .form-group { margin-bottom: 20px; }
     label { display: block; font-weight: bold; margin-bottom: 8px; color: #555; }
-    /* Estilos para todos os inputs de texto, URL, textarea e selects */
     input[type="text"],
     input[type="url"],
+    input[type="file"], /* Adicionado para input type="file" */
     textarea,
     select {
       width: calc(100% - 20px); /* Ajuste para padding */
@@ -59,8 +59,7 @@
 </head>
 <body>
   <h1>Adicionar Produto</h1>
-  <form id="produto-form">
-    <div class="form-group">
+  <form id="produto-form" enctype="multipart/form-data">     <div class="form-group">
       <label for="nome">Nome do Produto</label>
       <input type="text" id="nome" name="nome" required>
     </div>
@@ -70,16 +69,15 @@
     </div>
     <div class="form-group">
       <label for="preco">Preço (R$)</label>
-            <input type="text" id="preco" name="preco" placeholder="Ex: 123.45 ou 123,45" required>
+      <input type="text" id="preco" name="preco" placeholder="Ex: 123.45 ou 123,45" required>
     </div>
     <div class="form-group">
       <label for="link">Link do Produto</label>
       <input type="url" id="link" name="link" placeholder="https://exemplo.com/produto-xyz" required>
     </div>
     <div class="form-group">
-      <label for="imagens">URL da Imagem do Produto</label>
-            <input type="url" id="imagens" name="imagens" placeholder="Ex: https://exemplo.com/imagem.jpg" required>
-    </div>
+      <label for="imagens">Fazer Upload da Imagem</label>
+      <input type="file" id="imagens" name="imagens" accept="image/*" required>     </div>
     <div class="form-group">
       <label for="categoria">Categoria</label>
       <select id="categoria" name="categoria" required>
@@ -115,7 +113,7 @@
         <option value="alibaba">Alibaba</option>
       </select>
     </div>
-        <div class="form-group">
+    <div class="form-group">
       <label for="tamanho">Tamanho</label>
       <select id="tamanho" name="tamanho" required>
         <option value="">Selecione o Tamanho</option>
@@ -134,7 +132,7 @@
     const messageDiv = document.getElementById('message');
 
     // SEU ID DE IMPLANTAÇÃO DO GOOGLE APPS SCRIPT AQUI!
-    // USE O ID QUE VOCÊ ME FORNECEU AGORA: AKfycbyq0caZb8YCyN-h6E6Os4usnz_a_-wps06_t11llvaaQnDzv4XtAco4piR8a3uhe1-sng
+    // Use o ID que você me forneceu: AKfycbyq0caZb8YCyN-h6E6Os4usnz_a_-wps06_t11llvaaQnDzv4XtAco4piR8a3uhe1-sng
     const DEPLOYMENT_ID = 'AKfycbyq0caZb8YCyN-h6E6Os4usnz_a_-wps06_t11llvaaQnDzv4XtAco4piR8a3uhe1-sng';
     const SCRIPT_URL = `https://script.google.com/macros/s/${DEPLOYMENT_ID}/exec`;
 
@@ -143,66 +141,69 @@
     const tempToken = urlParams.get('tempToken');
     if (tempToken !== 'triple-click-access') {
       alert('Acesso não autorizado. Você será redirecionado.');
-      // Ajuste para a URL correta do seu index.html se estiver em um servidor,
-      // por exemplo: window.location.href = 'https://www.centrodecompra.com.br/index.html';
-      window.location.href = '/index.html';
+      window.location.href = '/index.html'; // Ou sua URL completa: 'https://www.centrodecompra.com.br/index.html'
     }
 
     // --- Função para exibir mensagens ---
     const showMessage = (text, isError = false) => {
       messageDiv.textContent = text;
       messageDiv.className = isError ? 'error' : 'success';
-      messageDiv.style.display = 'block'; // Mostra a div de mensagem
+      messageDiv.style.display = 'block';
       setTimeout(() => {
         messageDiv.textContent = '';
         messageDiv.className = '';
-        messageDiv.style.display = 'none'; // Esconde a div novamente
-      }, 5000); // Mensagem some após 5 segundos
+        messageDiv.style.display = 'none';
+      }, 5000);
     };
 
     // --- Event Listener para Submissão do Formulário ---
     form.addEventListener('submit', async (e) => {
-      e.preventDefault(); // Impede o envio padrão do formulário
-      showMessage('Enviando produto...', false); // Feedback inicial
+      e.preventDefault();
+      showMessage('Enviando produto e imagem...', false);
 
-      // Coleta os dados do formulário
-      const produto = {
-        nome: form.nome.value,
-        descricao: form.descricao.value, // Campo "descricao" adicionado
-        preco: form.preco.value, // Mantido como texto (string) para flexibilidade (ex: "123,45")
-        link: form.link.value, // Campo "link" adicionado
-        imagens: form.imagens.value, // Agora coleta a URL do campo "imagens"
-        categoria: form.categoria.value,
-        loja: form.loja.value,
-        tamanho: form.tamanho.value // Mantido
-      };
+      const imagemInput = document.getElementById('imagens');
+      if (!imagemInput.files[0]) {
+        showMessage('Por favor, selecione uma imagem para upload.', true);
+        return;
+      }
 
-      console.log('Produto a ser enviado:', produto);
+      // Usa FormData para lidar com upload de arquivo
+      const formData = new FormData();
+      formData.append('nome', form.nome.value);
+      formData.append('descricao', form.descricao.value);
+      formData.append('preco', form.preco.value);
+      formData.append('link', form.link.value);
+      formData.append('categoria', form.categoria.value);
+      formData.append('loja', form.loja.value);
+      formData.append('tamanho', form.tamanho.value);
+      formData.append('imagens', imagemInput.files[0]); // Adiciona o arquivo Blob
+
+      console.log('Dados do FormData a serem enviados:');
+      for (let [key, value] of formData.entries()) {
+        console.log(`${key}: ${value}`);
+      }
 
       try {
         const response = await fetch(SCRIPT_URL, {
           method: 'POST',
-          mode: 'cors', // Necessário para requisições cross-origin
-          headers: {
-            'Content-Type': 'application/json' // Indica que estamos enviando JSON
-          },
-          body: JSON.stringify(produto) // Converte o objeto produto para JSON
+          body: formData // IMPORTANTE: Envia o FormData diretamente, sem JSON.stringify
+          // NÂO adicione 'Content-Type': 'application/json' aqui.
+          // O navegador define automaticamente o 'Content-Type' como 'multipart/form-data'
+          // quando você usa FormData.
         });
 
-        // Verifica se a requisição foi bem-sucedida (status 2xx)
         if (response.ok) {
-          const result = await response.json(); // Tenta parsear a resposta como JSON
+          const result = await response.json();
           console.log('Resposta do servidor:', result);
 
           if (result.status === 'success') {
-            showMessage('Produto adicionado com sucesso!', false);
-            form.reset(); // Limpa o formulário
+            showMessage('Produto adicionado com sucesso! Imagem salva: ' + result.imageUrl, false);
+            form.reset();
           } else {
             showMessage('Erro ao adicionar produto: ' + (result.message || 'Resposta inesperada.'), true);
           }
         } else {
-          // Se a resposta não for OK (ex: 400, 500)
-          const errorText = await response.text(); // Pega o texto da resposta de erro
+          const errorText = await response.text();
           console.error('Erro na resposta do servidor (status ' + response.status + '):', errorText);
           showMessage('Erro ao adicionar produto: ' + response.statusText + ' (' + response.status + ')', true);
         }
